--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 1. Filter data/preprocessing
   1.1 Redundancy reduction (if necessary)
-  1.2 Remove bacterial or eukaryote DNA depeding on pathway
-  1.3 Quality filter
+  1.2 Contaminant removal (Phix/Human and etc.)
+  1.3 Remove bacterial or eukaryote DNA depeding on pathway (linked to step 1.2?)
+  1.4 Quality filter
 2. Assembly
 3. Gene prediction
   3.1 blast (megan)
