--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 1. Filter data/preprocessing
+See https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/data-preprocessing/ - has a nice list of useful preporcessing steps
   1.1 Redundancy reduction (if necessary)
   1.2 Contaminant removal (Phix/Human and etc.)
   1.3 Remove bacterial or eukaryote DNA depeding on pathway (linked to step 1.2?)
